--- a/sass/style_single.css
+++ b/sass/style_single.css
@@ -4,7 +4,16 @@
   margin: 0 auto;
 }
 
-.single_topArea .up {
+.single .single_title {
+  text-align: center;
+  margin: 100px 0 30px 0;
+}
+
+.single .single_topArea {
+  margin-bottom: 30px;
+}
+
+.single .single_topArea .up {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -15,14 +24,40 @@
   padding: 12px;
 }
 
-.single_topArea .up .up_day {
+.single .single_topArea .up .up_day {
   font-size: 20px;
   font-weight: bold;
 }
 
-.single_topArea .up .up_icons {
+.single .single_topArea .up .up_icons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.single .single_topArea .breadcrumb {
+  padding: 12px;
+  font-size: 16px;
+}
+
+.single .single_content p {
+  margin: 30px 5px;
+}
+
+.single .single_content h2 {
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  padding: 15px;
+  text-align: center;
+  margin: 30px 0px;
+}
+
+.single .single_content h3 {
+  width: 50%;
+  border-bottom: 2px solid black;
+  padding: 15px;
+  text-align: center;
+  margin: 50px auto;
+  font-size: 20px;
 }
 /*# sourceMappingURL=style_single.css.map */
