--- a/sass/style.css
+++ b/sass/style.css
@@ -5,7 +5,6 @@ html {
 body {
   font-family: "Noto Sans JP", sans-serif;
   font-weight: 300;
-  background-color: #f3f3f3;
   width: 100%;
 }
 
@@ -14,19 +13,14 @@ body a {
   color: black;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
-}
-
 .header {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   position: fixed;
   z-index: 9999;
   padding: 30px 25px;
@@ -67,7 +61,7 @@ main .topImg {
   background-image: url("../img/top.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: right top;
+  background-position: right bottom;
 }
 
 @media screen and (max-width: 767px) {
@@ -90,11 +84,11 @@ main .about a img {
 
 main .about a img:hover {
   -webkit-transform: scale(1.1, 1.1);
-  transform: scale(1.1, 1.1);
+          transform: scale(1.1, 1.1);
   opacity: 0.8;
   border-radius: 100px;
   -webkit-box-shadow: 0 2px 5px black;
-  box-shadow: 0 2px 5px black;
+          box-shadow: 0 2px 5px black;
 }
 
 main .about_text {
@@ -111,7 +105,7 @@ main .about_text {
   }
   main .about a img:hover {
     -webkit-transform: scale(0.9, 0.9);
-    transform: scale(0.9, 0.9);
+            transform: scale(0.9, 0.9);
   }
 }
 
@@ -151,8 +145,10 @@ main .popular_list {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   width: 950px;
   margin: 0 auto;
 }
@@ -161,6 +157,7 @@ main .news_list .item,
 main .popular_list .item {
   position: relative;
   width: 300px;
+  margin-bottom: 30px;
 }
 
 main .news_list .item_img,
@@ -251,10 +248,10 @@ main .category_list {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
   width: 1000px;
   margin: 0 auto;
   padding: 0 20px;
@@ -321,8 +318,8 @@ main .category_list .item_genre_en {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding: 30px 100px;
 }
 
@@ -350,5 +347,39 @@ main .category_list .item_genre_en {
   .footer .copyright {
     margin-top: 20px;
   }
+}
+
+/*wp-pagenavi base*/
+.wp-pagenavi {
+  clear: both;
+  text-align: center;
+  margin-bottom: 100px;
+}
+
+.wp-pagenavi a,
+.wp-pagenavi span {
+  color: #999;
+  background-color: #fff;
+  border: solid 1px #e0e0d2;
+  padding: 8px 15px;
+  margin: 0 2px;
+  white-space: nowrap;
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
+  text-align: center;
+  text-decoration: none;
+}
+
+.wp-pagenavi a:hover {
+  color: #fff;
+  background-color: #999;
+  border-color: #999;
+}
+
+.wp-pagenavi span.current {
+  color: #fff;
+  background-color: black;
+  border-color: black;
+  font-weight: bold;
 }
 /*# sourceMappingURL=style.css.map */
