--- a/sass/style_single.scss
+++ b/sass/style_single.scss
@@ -2,19 +2,48 @@
   width: 1000px;
   padding: 0 50px;
   margin: 0 auto;
-}
-.single_topArea {
-  .up {
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 3px solid black;
-    padding: 12px;
-    .up_day {
-      font-size: 20px;
-      font-weight: bold;
-    }
-    .up_icons {
+  .single_title {
+    text-align: center;
+    margin: 100px 0 30px 0;
+  }
+  .single_topArea {
+    margin-bottom: 30px;
+    .up {
       display: flex;
+      justify-content: space-between;
+      border-bottom: 3px solid black;
+      padding: 12px;
+      .up_day {
+        font-size: 20px;
+        font-weight: bold;
+      }
+      .up_icons {
+        display: flex;
+      }
+    }
+    .breadcrumb {
+      padding: 12px;
+      font-size: 16px;
+    }
+  }
+  .single_content {
+    p {
+      margin: 30px 5px;
+    }
+    h2 {
+      border-top: 2px solid black;
+      border-bottom: 2px solid black;
+      padding: 15px;
+      text-align: center;
+      margin: 30px 0px;
+    }
+    h3 {
+      width: 50%;
+      border-bottom: 2px solid black;
+      padding: 15px;
+      text-align: center;
+      margin: 50px auto;
+      font-size: 20px;
     }
   }
 }
