--- a/sass/style.scss
+++ b/sass/style.scss
@@ -35,6 +35,7 @@ body {
   position: fixed;
   z-index: 9999;
   padding: 30px 25px;
+  background-color: rgba(255, 255, 255, 0.8);
   &_title {
     font-size: 30px;
     letter-spacing: 8px;
@@ -74,11 +75,15 @@ main {
     background-image: url("../img/top.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: right bottom;
+    background-position: center;
   }
   @include mq("sp") {
     .topImg {
       height: 80vh;
+      width: 100%;
+      background-image: url("../img/top_sp.jpg");
+      background-size: contain;
+      background-position: top;
     }
   }
 
@@ -109,6 +114,7 @@ main {
   }
   @include mq("sp") {
     .about {
+      padding: 40px 0;
       &_text {
         font-size: 4vw;
       }
@@ -152,8 +158,10 @@ main {
         position: relative;
         width: 300px;
         margin-bottom: 30px;
-        &_img {
+        img {
           width: 300px;
+          height: 180px;
+          object-fit: cover;
         }
         &_genre {
           position: absolute;
@@ -177,6 +185,7 @@ main {
       }
     }
     .p {
+      display: block;
       text-align: center;
       border-top: 2px solid;
       border-bottom: 2px solid;
@@ -190,16 +199,23 @@ main {
   @include mq("sp") {
     .news,
     .popular {
+      padding: 30px 20px;
+      &_title {
+        margin-bottom: 40px;
+      }
       &_list {
         display: inline-block;
         width: 100%;
         .item {
           width: 100%;
           margin-bottom: 40px;
-          &_img {
+          img {
             width: 100%;
           }
         }
+      }
+      .p {
+        margin: 30px auto 30px auto;
       }
     }
   }
@@ -264,6 +280,10 @@ main {
 
   @include mq("sp") {
     .category {
+      padding: 30px 20px;
+      &_title {
+        margin-bottom: 40px;
+      }
       &_list {
         display: inline-block;
         width: 100%;
