--- a/sass/style_single.css
+++ b/sass/style_single.css
@@ -1,7 +1,7 @@
 .single {
   width: 1000px;
   padding: 0 50px;
-  margin: 0 auto;
+  margin: 0 auto 200px auto;
 }
 
 .single .single_title {
@@ -40,6 +40,11 @@
   font-size: 16px;
 }
 
+.single .thumbnail img {
+  width: 100%;
+  height: auto;
+}
+
 .single .single_content p {
   margin: 30px 5px;
 }
@@ -49,7 +54,7 @@
   border-bottom: 2px solid black;
   padding: 15px;
   text-align: center;
-  margin: 30px 0px;
+  margin: 50px 0px;
 }
 
 .single .single_content h3 {
@@ -59,5 +64,12 @@
   text-align: center;
   margin: 50px auto;
   font-size: 20px;
+}
+
+@media screen and (max-width: 767px) {
+  .single {
+    width: 90%;
+    padding: 0;
+  }
 }
 /*# sourceMappingURL=style_single.css.map */
