--- a/sass/style_single.scss
+++ b/sass/style_single.scss
@@ -1,7 +1,24 @@
+// レイアウト幅
+$layout-width-inner: 1000px;
+
+// ブレークポイント
+$breakpoints: (
+  "sp": "screen and (max-width: 767px)",
+  "tab": "screen and (max-width: #{$layout-width-inner - 1px})",
+  "pc": "screen and (min-width: #{$layout-width-inner})",
+);
+
+// メディアクエリ
+@mixin mq($breakpoint: sp) {
+  @media #{map-get($breakpoints, $breakpoint)} {
+    @content;
+  }
+}
+
 .single {
   width: 1000px;
   padding: 0 50px;
-  margin: 0 auto;
+  margin: 0 auto 200px auto;
   .single_title {
     text-align: center;
     margin: 100px 0 30px 0;
@@ -26,6 +43,12 @@
       font-size: 16px;
     }
   }
+  .thumbnail {
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
   .single_content {
     p {
       margin: 30px 5px;
@@ -35,7 +58,7 @@
       border-bottom: 2px solid black;
       padding: 15px;
       text-align: center;
-      margin: 30px 0px;
+      margin: 50px 0px;
     }
     h3 {
       width: 50%;
@@ -45,5 +68,12 @@
       margin: 50px auto;
       font-size: 20px;
     }
+  }
+}
+
+@include mq("sp") {
+  .single {
+    width: 90%;
+    padding: 0;
   }
 }
