--- a/sass/style_single.css
+++ b/sass/style_single.css
@@ -2,18 +2,19 @@
   width: 1000px;
   padding: 0 50px;
   margin: 0 auto 200px auto;
+  background-color: #fff;
 }
 
-.single .single_title {
+.single_title {
   text-align: center;
   margin: 100px 0 30px 0;
 }
 
-.single .single_topArea {
+.single_topArea {
   margin-bottom: 30px;
 }
 
-.single .single_topArea .up {
+.single_topArea .up {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -24,18 +25,18 @@
   padding: 12px;
 }
 
-.single .single_topArea .up .up_day {
+.single_topArea .up .up_day {
   font-size: 20px;
   font-weight: bold;
 }
 
-.single .single_topArea .up .up_icons {
+.single_topArea .up .up_icons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.single .single_topArea .breadcrumb {
+.single_topArea .breadcrumb {
   padding: 12px;
   font-size: 16px;
 }
@@ -45,20 +46,22 @@
   height: auto;
 }
 
-.single .single_content p {
+.single_content p {
   margin: 30px 5px;
+  font-size: 18px;
 }
 
-.single .single_content h2 {
+.single_content h2 {
   border-top: 2px solid black;
   border-bottom: 2px solid black;
   padding: 15px;
   text-align: center;
   margin: 50px 0px;
+  font-size: 25px;
 }
 
-.single .single_content h3 {
-  width: 50%;
+.single_content h3 {
+  width: 80%;
   border-bottom: 2px solid black;
   padding: 15px;
   text-align: center;
@@ -66,10 +69,32 @@
   font-size: 20px;
 }
 
+.wp-block-columns {
+  margin: 0 !important;
+}
+
+.wp-block-column {
+  padding: 20px;
+  background-color: lightgray;
+}
+
+.wp-block-column ol {
+  line-height: 35px;
+}
+
 @media screen and (max-width: 767px) {
   .single {
     width: 90%;
     padding: 0;
+  }
+  .single_content h3 {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 999px) and (min-width: 768px) {
+  .single {
+    width: 100%;
   }
 }
 /*# sourceMappingURL=style_single.css.map */
