--- a/sass/style_single.scss
+++ b/sass/style_single.scss
@@ -4,7 +4,8 @@ $layout-width-inner: 1000px;
 // ブレークポイント
 $breakpoints: (
   "sp": "screen and (max-width: 767px)",
-  "tab": "screen and (max-width: #{$layout-width-inner - 1px})",
+  "tab":
+    "screen and (max-width: #{$layout-width-inner - 1px}) and (min-width: 768px)",
   "pc": "screen and (min-width: #{$layout-width-inner})",
 );
 
@@ -19,11 +20,12 @@ $breakpoints: (
   width: 1000px;
   padding: 0 50px;
   margin: 0 auto 200px auto;
-  .single_title {
+  background-color: #fff;
+  &_title {
     text-align: center;
     margin: 100px 0 30px 0;
   }
-  .single_topArea {
+  &_topArea {
     margin-bottom: 30px;
     .up {
       display: flex;
@@ -49,9 +51,10 @@ $breakpoints: (
       height: auto;
     }
   }
-  .single_content {
+  &_content {
     p {
       margin: 30px 5px;
+      font-size: 18px;
     }
     h2 {
       border-top: 2px solid black;
@@ -59,9 +62,10 @@ $breakpoints: (
       padding: 15px;
       text-align: center;
       margin: 50px 0px;
+      font-size: 25px;
     }
     h3 {
-      width: 50%;
+      width: 80%;
       border-bottom: 2px solid black;
       padding: 15px;
       text-align: center;
@@ -71,9 +75,30 @@ $breakpoints: (
   }
 }
 
+.wp-block-columns {
+  margin: 0 !important;
+}
+.wp-block-column {
+  padding: 20px;
+  background-color: lightgray;
+  ol {
+    line-height: 35px;
+  }
+}
+
 @include mq("sp") {
   .single {
     width: 90%;
     padding: 0;
+    &_content {
+      h3 {
+        width: 80%;
+      }
+    }
+  }
+}
+@include mq("tab") {
+  .single {
+    width: 100%;
   }
 }
